Fix link color for accessibility contrast

--- a/app/packs/stylesheets/decidim/decidim_application.scss
+++ b/app/packs/stylesheets/decidim/decidim_application.scss
@@ -31,6 +31,6 @@ a.button--france_connect:hover {
 }
 
 a[title="Find out more about cookies"]{
-  color: red;
+  color: #000000;
   text-decoration: underline;
 }
